objects/Mailbox_Origin_Emails__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Mailbox_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailbox Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailbox_origin_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailbox origin Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Queue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Mailbox Origin Emails</label>
</CustomObject>